--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,7 +9,7 @@
     tools:showIn="@layout/activity_main">
 
     <ListView
-        android:id="@+id/listCities"
+        android:id="@+id/listCity"
         android:layout_width="368dp"
         android:layout_height="495dp"
         android:layout_marginStart="8dp"
